# simple-t1-motion-detection

./: README.md
src/: CMakeLists.txt  motion_detection.cxx
src/utils/: ReadDICOMDirectory.cxx  ReadDICOMDirectory.h
